# TFG-differential-drive-robot

./: .gitignore  8.26.09.656439950-gst-launch.snapshot.dot  8.26.09.659832547-gst-launch.snapshot.dot  README.md  frames.gv  libpulse0_13.99.1-1ubuntu3_arm64.deb  package-lock.json  pulseaudio-module-bluetooth_13.99.1-1ubuntu3_arm64.deb  pulseaudio_13.99.1-1ubuntu3.13_arm64.deb  python-pygame_1.9.6+dfsg-2build1_arm64.deb  test.py  test2.py
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/amcl/: AMCLConfig.h
devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelPluginConfig.h
devel/include/costmap_converter/: CostmapToDynamicObstaclesConfig.h  CostmapToLinesDBSMCCHConfig.h  CostmapToLinesDBSRANSACConfig.h  CostmapToPolygonsDBSConcaveHullConfig.h  CostmapToPolygonsDBSMCCHConfig.h  ObstacleArrayMsg.h  ObstacleMsg.h
devel/include/diagnostic_msgs/: AddDiagnosticsRequest.h  AddDiagnosticsResponse.h
devel/include/diff_drive/: GoToPoseAction.h  GoToPoseActionFeedback.h  GoToPoseActionGoal.h  GoToPoseActionResult.h  GoToPoseFeedback.h  GoToPoseGoal.h  GoToPoseResult.h
devel/include/geometry_msgs/: Pose.h  Pose2D.h  PoseArray.h  PoseStamped.h  PoseWithCovariance.h  PoseWithCovarianceStamped.h  TransformStamped.h
devel/include/global_planner/: GlobalPlannerConfig.h
devel/include/map_msgs/: GetMapROIResponse.h  GetPointMapROIRequest.h  (+3 more)
modules/detector/: setup.py
modules/video/: CMakeLists.txt
modules/video/include/: common.hpp  videosocket_output.hpp  webcam_input.hpp
modules/video/src/: CMakeLists.txt  main.cpp  videosocket_output.cpp  webcam_input.cpp
modules/web/: setup.py  test_video.py  video_client.py
research/scripts/: control_wheels_with_lidar.py  control_wheels_with_lidar_angles.py  odrivesetup.py
scripts/: RAH01Interface.rviz  RobotUcaInterface.rviz  make_sound.py  odom_publisher.py  odrive_setup.py  scan_freqcuency.py  scan_reading.py  setup_modules.sh
src/custom_launch_files/: map_server.launch
src/diff_drive/: CMakeLists.txt
src/mobile_robot/: CMakeLists.txt
src/rah01/: CMakeLists.txt  package.xml
src/robotuca/: package.xml
src/robotuca_people_follower/: CMakeLists.txt  package.xml
(+866 files in other folders)
